# SGKit

./: .editorconfig  .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
cmake/: CompilerSettings.cmake  Platform.cmake
docs/: RESOURCE_MANAGEMENT.md  THREAD_POOL.md  USER_MANUAL.md
examples/: CMakeLists.txt
examples/Light/: CMakeLists.txt  main.cpp
examples/Light/assets/: light.frag  light.vert  simple.frag  simple.vert
examples/Lighting/: CMakeLists.txt  main.cpp
examples/Lighting/assets/shaders/: default.vert
examples/sandbox/: CMakeLists.txt  main.cpp
examples/sandbox/assets/shaders/: default.frag  depth.vert
icon/: app.rc
include/sgkit/: sgkit.h  sgkit_core.h  sgkit_framework.h  sgkit_graphics.h  sgkit_math.h  sgkit_scene.h
include/sgkit/core/: Debug.h  DebugOut.h  FileSystem.h  Input.h  KeyCodes.h  ThreadPool.h  ThreadPoolImpl.h  Window.h
include/sgkit/framework/: Application.h  Timing.h
include/sgkit/graphics/: Framebuffer.h  IndexBuffer.h  Material.h  Mesh.h  RenderContext.h  Renderer.h  Shader.h  Texture.h  VertexArray.h  VertexBuffer.h  VertexLayout.h
include/sgkit/math/: MathUtils.h  Matrix4.h  Quaternion.h  Transform.h  Vector2.h  Vector3.h  Vector4.h
include/sgkit/scene/: ComponentPool.h  ComponentPoolImpl.h  Components.h  Entity.h  Scene.h
src/: CMakeLists.txt
src/core/: DebugOut.cpp  FileSystem.cpp  Input.cpp  ThreadPool.cpp  Window.cpp
src/framework/: Application.cpp  Timing.cpp
src/graphics/: Framebuffer.cpp  IndexBuffer.cpp  Material.cpp  Mesh.cpp  Renderer.cpp  Shader.cpp  Texture.cpp  VertexArray.cpp  VertexBuffer.cpp  VertexLayout.cpp
src/math/: Matrix4.cpp  Quaternion.cpp  Transform.cpp  Vector2.cpp  Vector3.cpp  Vector4.cpp
src/scene/: Entity.cpp  Scene.cpp
tests/: CMakeLists.txt  test_math.cpp  test_threadpool.cpp
